--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "morgan": "~1.9.1",
     "mysql": "2.17.1",
     "path": "0.12.7",
+    "sweetalert2": "8.18.5",
     "swig": "1.4.2",
     "waterline": "0.13.6"
   },
