--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
     "consolidate": "0.15.1",
     "cookie-parser": "~1.4.4",
