--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "express-flash": "0.0.2",
     "express-session": "1.17.0",
     "express-validator": "6.2.0",
+    "flash": "1.1.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "method-override": "3.0.0",
