--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "ejs": "2.7.1",
     "express": "~4.16.1",
+    "express-ejs-layouts": "2.5.0",
     "express-flash": "0.0.2",
     "express-session": "1.17.0",
     "express-validator": "6.2.0",
