--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "express-flash": "0.0.2",
     "express-mysql-session": "2.1.0",
     "express-session": "1.17.0",
+    "express-session-sequelize": "2.1.0",
     "express-validator": "6.2.0",
     "flash": "1.1.0",
     "http-errors": "~1.6.3",
